adding test , dev profiles